Fixed hortiz scroll in general case. Homepage still too wide
git-svn-id: https://socorro.googlecode.com/svn/trunk@915 efcc4bdc-162a-0410-a8af-5b4b46c5376d

--- a/webapp-php/css/slate.css
+++ b/webapp-php/css/slate.css
@@ -22,14 +22,13 @@ a img {
 #header {
     background: url(../img/slate/header-bg.png) repeat-x;
     background-color: #333;
-    padding-left: 10px;
     margin: 0 0 10px 0;
     width: 100%;
     height: 33px;
 }
 
 #header h1 {
-    margin: 0;
+    margin: 0px 10px;
     float: left;
 }
 
